FreeST/test/Programs/InvalidTests/Typing/dataTypeMismatch/dataTypeMismatch.fst
data IntList = Nil | Cons Int IntList

main : Bool
main = Cons 4 Nil
